
Bugfixes:

* Message Inbox section - layout error #542
* Poke translation issue #543
* Css(class): ossn-profile-wall shouldn't have fixed hight #545
* Profile edit form shows wrong default language #546
* Change uppercase admin tobbar right menu.
* There is issue in chat window layout firefox #548
* Add limit and page_limit false while deleting annotations by owner guid.


OSSN - OPEN SOURCE SOCIAL NETWORK 3.4-3.5

Bugfixes:

* Hook for changing plugin type isn't working.
* One uneeded redirection when login #516
* Remove chart legend code form chart.min.js #517
* Photos limit issue, only 10 displays #523
* Youtube https in ossnembed.lib.php #519
* Translation for gender in dashboard users & users online #511
* Remove a duplicate callback from groups initialize function.
* Profile/cover like or comment notification view redirect to 404 page.
* Comment menu shows 0, 1 instead of delete


Enhancement:

* Added new hook 'plugin, view:type'.
* Remove hook 'plugins, type'.
* Move system/default to system/plugins/default
* Open link in new tab #518
* Default order for entities , objects, annotations must be by their primary id.
* Delete users messages if user is deleted #522
* Add a wall 'postextra' menu.
* When click on comment link focus on comment box.
* Add a new function in menu library.

OSSN - OPEN SOURCE SOCIAL NETWORK 3.3

Bugfixes:

* When installing components it show success for lower version #510
* Fresh installation of v3.2 still shows old version, v3.0, Reported by Softaculous Team.
* Improve component installer language strings.


OSSN - OPEN SOURCE SOCIAL NETWORK 3.2

Bugfixes:

* Ossn v3.0 components versions compatibility issue on v3.x
* Fix typo in language strings.

Thanks to David Orwig for reporting issues https://www.opensource-socialnetwork.org/u/David111567

OSSN - OPEN SOURCE SOCIAL NETWORK 3.1

Bugfixes:

* Site pages didn't updating pages #482
* Privacy option is empty #481
* Fix old views paths to new plugin paths #483